--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ pexpect==4.7.0
 pickleshare==0.7.5
 pluggy==0.13.0
 prompt-toolkit==2.0.9
-psycopg2-binary==2.7.7
+psycopg2-binary==2.8.3
 ptyprocess==0.6.0
 py==1.8.0
 pycodestyle==2.5.0
@@ -56,3 +56,4 @@ text-unidecode==1.3
 traitlets==4.3.2
 wcwidth==0.1.7
 zipp==0.6.0
+uwsgi==2.0.18
