added configuration for static analysis

--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,5 @@
 # SyntaxError: invalid syntax for f'' formats
 ignore = E999,W504
 max-line-length = 120
-exclude = */docs/*,*/migrations/*,tickets_back/settings/*,manage.py,tickets_back/s3utils.py
+exclude = */docs/*,*/migrations/*,tickets_back/settings/*,manage.py,tickets_back/s3utils.py,tickets_back_env
 max-complexity = 15
